# alfalfa

./: .gitignore  configure.ac
results/scripts/: output.txt  process_all.sh  process_difference.py  process_output.py  process_output.sh  process_result.py  psnr.txt  util.txt
src/: Makefile.am
src/components/: Makefile.am  bw_control.cc  bw_control.hh  comp_decoder.cc  comp_decoder.hh  comp_encoder.cc  comp_encoder.hh  congestion_control.cc  congestion_control.hh  frame_observer.cc  frame_observer.hh  stats.cc  stats.hh  test-receiver.cc  test-sender.cc  transmission.cc  transmission.hh
src/components/scripts/: process_difference.py  process_result.py  run_receiver.sh  run_sender.sh
src/components/temp/: process_result.py
src/display/: Makefile.am  sdl.cc  sdl.hh
src/encoder/: safe_references.cc
src/input/: camera.cc  yuv4mpeg.cc  yuv4mpeg.hh
src/net/: packet.cc  packet.hh  poller.cc  socket.cc  socket.hh
src/salsify/: Makefile.am  fake-webcam.cc  real-webcam.cc  salsify-receiver.cc  salsify-sender.cc
src/tests/: Makefile.am  test_components  test_components.cc
src/util/: Makefile.am  exception.hh  file_descriptor.hh  timerfd.cc  timerfd.hh  timestamp.cc
test/: -00nar1nEPc_000033_000043-mpeg.csv  test-bw-fixed.csv  test-bw.csv  test-loss.csv  tom-norman.csv
test/config/: bbr-1-1.json  bbr-1-2.json  bbr-1-3.json  bbr-2-1.json  bbr-2-2.json  bbr-2-3.json  bbr-3-1.json  bbr-3-2.json  bbr-3-3.json  bbr-4-1.json  bbr-4-2.json  bbr-4-3.json  bbr-5-1.json  bbr-5-2.json  bbr-5-3.json  bbr-fec-1-1.json  bbr-fec-1-2.json  bbr-fec-1-3.json  bbr-fec-2-1.json  bbr-fec-2-2.json  bbr-fec-2-3.json  bbr-fec-3-1.json  bbr-fec-3-2.json  bbr-fec-3-3.json  bbr-fec-4-1.json  bbr-fec-4-2.json  bbr-fec-4-3.json  bbr-fec-5-1.json  bbr-fec-5-2.json  bbr-fec-5-3.json  bbr-svc-1-1.json  bbr-svc-1-2.json  bbr-svc-1-3.json  bbr-svc-2-1.json  bbr-svc-2-2.json  bbr-svc-2-3.json  bbr-svc-3-1.json  (+114 more)
(+750 files in other folders)
